# APLCON

./: .gitignore  APLCON_test.cc  APLCON_test.cpp  APLCON_wrapper.f90  APLCON_wrapper.h  CMakeLists.txt  KinFit.cc  KinFit.h  KinFit_test.cc  README.md
APLCON/: CMakeLists.txt  Makefile  Maketar  README  a12prof.F  aplist.F  aploop.F  aplprint.F  aplusopt.F  chprob.F  comcfit.inc  condutil.F  cprofil.inc  dcsplines.F  declarefl.inc  fpl.F  nauxfit.inc  packfl.inc  unpackfl.inc
APLCON/manual/: aplcon_model.txt  mini_model.txt
APLCON/test/: Makefile  avlass.F  avlass.txt  avmain.F  avvsys.F
ci/: build.sh  travis.yml  upload-coverage.sh
cmake/: Doxyfile.in  FindAPLCON.cmake.example  doxygen.cmake  settings.cmake
src/: APLCON.cc  APLCON.hpp  APLCON_example.cc  APLCON_test.cc
src/detail/: APLCON_cc.hpp  APLCON_hpp.hpp  APLCON_ostream.hpp  APLCON_templates.hpp
src/example/: 00_verysimple.cc  01_simple.cc  02_linker.cc  03_advanced.cc  03_kinfit.cc  04_linefit.cc
src/wrapper/: APLCON.f90  APLCON.h
test/: CMakeLists.txt  TestLinker.cc  TestSimple.cc  TestVerySimple.cc  catch.cc
